--- a/HotelBookingApp/HotelBookingApp.csproj
+++ b/HotelBookingApp/HotelBookingApp.csproj
@@ -168,5 +168,8 @@
   <ItemGroup>
     <Folder Include="Model\" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\bookinghotel.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
